   (Brian Evans).
 - Defined a comparison routine for contexts in Python (Brian Evans).
 - For the auto-join command, added an 'x' filler for empty keys. This works
   around a bug in ircd-seven.
 - When a single channel MODE changes, xchat will no longer re-issue a MODE
   request for the titlebar display, but figure the new modes intelligently
   (Brian Evans).
 - 
 - Perl (Lian Wan Situ)
  * Fixed a bug that resulted in timer hooks being leaked because
    "return REMOVE" from a timer callback was not unhooking like it was
    supposed to
  * Reverted the unintentional change to how the server argument of print()
    and command() is interepreted when it is undef
  * Add hook_fd to the 'hooks' export tag
  * Fixed a leak in XS_Xchat_get_list(Vincent Pit)
  * Change Xchat::register so that scripts calling it without a name or
    version will still show up in the plugins and scripts window.
  * Added calls to PERL_SYS_INIT3 and PERL_SYS_TERM which are required on
    some platforms
  * Added some additional guards to prevents bits of scripts from spilling
    into each other
  * Added "modes", "win_ptr" and "xchatdirfs" to the list of keys that are
    returned by context_info()
  * Changed the information displayed in the "Plugins & Scripts" for scripts
    that do not call register() to show up as "" for the name and description
    and "unknown" for the version
  * /reloadall will now reload scripts in the same order they were loaded
  * Make xchat_send_modes available as Xchat::send_modes
  * Add support for getting the network list using Xchat::get_list( "networks" )
  * Xchat::strip_code will now strip off ANSI escape codes as well


------------------------------------------------------------------------------
 2.8.6 - 11/Jun/2008
------------------------------------------------------------------------------

 - Updated translations (de, fi, fr, hu, lt, nb, ru, th, zh_CN).
 - Fixed creation of ~/.xchat2/scrollback/ paths (xc284-scrollbmkdir.diff).